--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="msapplication-tap-highlight" content="no">
   <meta charset="utf-8">
   <title>XWebTransactor</title>
-  <base href="/">
+  <!--base href="/"-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
