--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="./assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./assets/css/util.css">
-  <link rel="stylesheet" href="./assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/util.css">
+  <link rel="stylesheet" href="assets/vendor/animate/animate.css">
   
 <link rel="stylesheet" href="styles.8842e260bde7f277a7c4.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.fd2d57fd02ebc2bac8ae.js"></script><script type="text/javascript" src="polyfills.ea63bb9fc8de94af2247.js"></script><script type="text/javascript" src="scripts.37f9736cd1387ff73ae2.js"></script><script type="text/javascript" src="main.b8a87c6a05268bc3e85d.js"></script></body>
+<script type="text/javascript" src="runtime.8ece4ac862baf69d652c.js"></script><script type="text/javascript" src="polyfills.ea63bb9fc8de94af2247.js"></script><script type="text/javascript" src="scripts.37f9736cd1387ff73ae2.js"></script><script type="text/javascript" src="main.b8a87c6a05268bc3e85d.js"></script></body>
 </html>
