--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/vendor/animate/animate.css">
   
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#3f51b5">
 <link rel="stylesheet" href="styles.9d695730ab1e0b782417.css"></head>
 <body>
   <app-root></app-root>
