--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icons/icon.png">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
 
   <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/util.css">
@@ -19,9 +23,9 @@
   
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#3f51b5">
-<link rel="stylesheet" href="styles.0230ae785c66b45774fd.css"></head>
+<link rel="stylesheet" href="styles.9d695730ab1e0b782417.css"></head>
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.c4d4356f6dc50a172566.js"></script><script type="text/javascript" src="polyfills.75a510d1682638efc96f.js"></script><script type="text/javascript" src="scripts.8d4409d2f5170fec0e88.js"></script><script type="text/javascript" src="main.72242cc4aa6ae6ac69f7.js"></script></body>
+  <!-- <noscript>Please enable JavaScript to continue using this application.</noscript> -->
+<script type="text/javascript" src="runtime.b539b9170b64eec891f5.js"></script><script type="text/javascript" src="polyfills.75a510d1682638efc96f.js"></script><script type="text/javascript" src="scripts.8d4409d2f5170fec0e88.js"></script><script type="text/javascript" src="main.9eb2be7a3de5e0b31f3b.js"></script></body>
 </html>
